--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,13 +18,13 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: 1.21
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
 
     - name: Build
-      run: CGO_ENABLED=0 go build -a -tags netgo -ldflags '-s -w' -v ./...
+      run: CGO_ENABLED=0 go build -a -tags netgo -ldflags '-s -w' -v -o . ./...
 
     - name: Compress binaries
       uses: svenstaro/upx-action@v2
