--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,9 @@ jobs:
     - name: Compress binaries
       uses: svenstaro/upx-action@v2
       with:
-        file: junit2jira
+        files: |
+          junit2jira
+          flakechecker
 
     - name: Test
       run: go test -v ./...
@@ -38,7 +40,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: junit2jira
-        path: junit2jira
+        path: |
+          junit2jira
+          flakechecker
 
   release:
     if: startsWith(github.ref, 'refs/tags/')
@@ -55,3 +59,4 @@ jobs:
         with:
           files: |
             junit2jira
+            flakechecker
